# Motor

./: .gitignore  CMakeLists.txt  SConstruct
glad/include/glad/: glad.h
glad/src/: glad.c
scratch_work/: light.ipynb  mtx_inv.ipynb
src/: Cycle.hpp  Input.cpp  Input.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  OrbitCamera.cpp  OrbitCamera.hpp  OrbitLight.hpp  Render.cpp  Render.hpp  Shader.cpp  Shader.hpp  Spatial.cpp  Spatial.hpp  Suzanne.hpp  Texture.cpp  Texture.hpp  Updater.hpp  Window.cpp  Window.hpp  keys.hpp  main.cpp  main.hpp
src/core/: Engine.cpp  Engine.hpp  Input.cpp  Input.hpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Object.hpp  Render.cpp  Render.hpp  Shader.cpp  Shader.hpp  Spatial.cpp  Spatial.hpp  TaskPool.cpp  TaskPool.hpp  Texture.cpp  Texture.hpp  Updater.hpp  Window.cpp  Window.hpp
src/defs/: gl_defs.cpp  gl_defs.hpp  keys.hpp
src/shaders/: color.f.glsl  debug_material_light.f.glsl  light.glsl  lighttest.f.glsl  material.f.glsl  mesh.v.glsl  mesh.vert  mesh_normal.f.glsl  mesh_uv.f.glsl  mesh_vertex.f.glsl  normals.f.glsl  normals.frag  passthrough.v.glsl  point_light.f.glsl  tex.f.glsl  texture_color.f.glsl  uniform_color.f.glsl  vertex.f.glsl
src/util/: Bloc.hpp  Cycle.hpp  MemSafe.hpp  SpinLock.hpp  TimedCycle.hpp  _bits.hpp  collections.hpp  concepts.hpp  funcy.hpp  gl_enum_names.cpp  gl_enum_names.hpp  glm.hpp  id.hpp  io.hpp  mat.hpp  math.hpp  mem.hpp  meta.hpp  print.hpp  quat.hpp  rand.hpp  refcount.hpp  stb_image.cpp  strings.hpp  time.cpp  time.hpp  vec.hpp
